# simple_social_media

./: .env  README.md  docker-compose.remote.yml  docker-compose.yml
auth_db_api/: pyproject.toml
auth_db_api/src/: config.py  main.py
auth_db_api/src/api/: endpoints.py  schemas.py
auth_db_api/src/auth/: models.py  repository.py  schemas.py  service.py
auth_service/: Dockerfile  pyproject.toml
auth_service/src/: config.py  core.py
auth_service/src/api/: endpoints.py
auth_service/src/authenticator/: http_clients.py  jwt_service.py  middleware.py  models.py  password_service.py  schemas.py  service.py
comment_service/: pyproject.toml
comments_service/: main.py  pyproject.toml
comments_service/src/: main.py
infra/remote-host/: Dockerfile  entrypoint.sh
post_service/: pyproject.toml
posts_db_api/: pyproject.toml  requirements.txt
posts_db_api/src/api/: endpoints.py  schemas.py
posts_db_api/src/posts/: models.py  repository.py  schemas.py  service.py
posts_service/: main.py  pyproject.toml
posts_service/src/: config.py  main.py
posts_service/src/api/: endpoints.py
posts_service/src/posts/: http_clients.py  middleware.py  schemas.py  service.py
scripts/: deploy-service.sh  push-service.sh  push-sql.sh
users_db_api/: Dockerfile  pyproject.toml  requirements.txt
users_db_api/src/api/: endpoints.py
users_db_api/src/users/: models.py  repository.py  schemas.py  service.py
users_service/: Dockerfile  pyproject.toml
users_service/src/: config.py
users_service/src/api/: endpoints.py
users_service/src/users/: http_clients.py  (+3 more)
