[project]
name = "auth-db-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.10",
    "pydantic-core>=2.33.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
